--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ES2022"],
     "strict": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "declaration": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "target": "es6",
-    "module": "commonjs",
-    "moduleResolution": "node"
+    "target": "ES2022",
+    "module": "ESNext",
+    "moduleResolution": "Bundler"
   },
   "include": ["src"]
 }
