--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
           cache: npm
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
-      - run: npm version ${{ github.ref_name }} --no-git-tag-version
+      - run: npm version ${{ github.ref_name }} --no-git-tag-version --allow-same-version
       - run: npm run build
       - run: npm publish ./dist
         env:
