--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "build": "tsc && cp package.json README.md ./dist"
   },
-  "keywords": ["remix", "nprogress"],
+  "keywords": [
+    "remix",
+    "nprogress"
+  ],
   "author": "Bryan Low",
   "license": "MIT",
   "type": "module",
