--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
   "type": "module",
   "description": "",
   "devDependencies": {
-    "@remix-run/node": "^2.12.1",
-    "@remix-run/react": "^2.12.1",
-    "@remix-run/serve": "^2.12.1",
+    "@react-router/dev": "^7.0.1",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
