--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "remix-nprogress",
-  "version": "1.0.0",
+  "name": "react-router-nprogress",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
     "build": "tsc && cp package.json README.md ./dist"
   },
   "keywords": [
-    "remix",
+    "react-router",
     "nprogress"
   ],
   "author": "Bryan Low",
